--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" href="style.css">
 	<!-- Font Links -->
 	<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Karla@1&display=swap" rel="stylesheet">
-	<!--            -->
+
+
 	<script src="script.js"></script>
 
 </head>
@@ -18,17 +19,21 @@
 		<div id="text">
 			<h1>Welcome to Ani Srikanth's Portfolio!</h1>
 			<p>This is my portfolio.</p>
-			<p>I'm a Computer Engineering student from <span id="imgTrigger" onmouseout="switchPic('og')" onmouseover="switchPic('toronto')">Toronto, Canada</span>. I love hip-hop,
+			<p>I'm a Computer Engineering student from
+				<span id="imgTrigger" onmouseout="switchPic('og')" onmouseover="switchPic('toronto')">Toronto, Canada</span>.
+				I love hip-hop,
 				movies, and writing software. My
-				dream is to be able to work on the next <span id="imgTrigger" onmouseout="switchPic('og')" onmouseover="switchPic('mars')">Mars rover mission!</span></p>
+				dream is to be able to work on the next
+				<span id="imgTrigger" onmouseout="switchPic('og')" onmouseover="switchPic('mars')">Mars rover mission!</span>
+			</p>
 		</div>
 	</div>
 	<div id="messageContainer">
 		<p>Click here to get a random message:</p>
 		<button onclick="addRandomGreeting()">Hello</button>
 		<div id="greeting-container">
-            <p id="greeting"></p>
-        </div>
+			<p id="greeting"></p>
+		</div>
 	</div>
 	</div>
 </body>
