Complete about footer

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -3,13 +3,13 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Ani Srikanth</title>
-	<link rel="stylesheet" href="style.css">
+    <title>Ani Srikanth</title>
+    <script src="https://kit.fontawesome.com/2ddbd86bc7.js" crossorigin="anonymous"></script>
 	<!-- Font Links -->
 	<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Karla@1&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
 
-
+    <link rel="stylesheet" href="style.css">
 	<script src="script.js"></script>
 
 </head>
@@ -76,7 +76,19 @@
 				dream is to be able to work on the next
 				<span id="imgTrigger" onmouseout="switchPic('og')" onmouseover="switchPic('mars')">Mars rover mission!</span>
 			</p>
-		</div>
+        </div>
+        <div id="contactContainer">
+            <div id="contactContent">
+                <h1>contact</h1>
+                <p id="contactBlurb">Wanna talk tech? Let's grab coffee!</p>
+                <i id="githubIcon" class="fab fa-github fa-2x"></i>
+                <i id="twitterIcon" class="fab fa-twitter fa-2x"></i>
+                <i id="igIcon" class="fab fa-instagram fa-2x"></i>
+                <a href="http://instagram.com/animanny"><p id="igHandle">@animanny</p></a>
+                <a href="http://twitter.com/digitalkami"><p id="twitterHandle">@digitalkami (don't ask)</p></a>
+                <a href="http://github.com/animanny"><p id="githubHandle">@animanny</p></a>
+            </div>
+        </div>
 	</div>
 
 
