Correct anchor not wrapping resume button

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -20,7 +20,7 @@
 			<div id="landingContent">
 				<h1>ani srikanth</h1>
 				<p>// portfolio 2020 //</p>
-				<a href="https://drive.google.com/open?id=1xFMzh4TMwRt8aA31bT6K014g42u12JAi"><button>RESUME</button></a>
+				<a href="https://drive.google.com/open?id=1xFMzh4TMwRt8aA31bT6K014g42u12JAi">RESUME</a>
 			</div>
 		</div>
 
