--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -81,19 +81,26 @@
 		<div id="contactContainer">
 			<div id="contactContent">
 				<h1>contact</h1>
+				<div id="github">
+					<i id="githubIcon" class="fab fa-github fa-2x"></i>
+					<a href="http://github.com/animanny">
+						<p id="githubHandle">@animanny</p>
+					</a>
+				</div>
 				<p id="contactBlurb">Wanna talk tech? Let's grab coffee!</p>
-				<i id="githubIcon" class="fab fa-github fa-2x"></i>
-				<i id="twitterIcon" class="fab fa-twitter fa-2x"></i>
-				<i id="igIcon" class="fab fa-instagram fa-2x"></i>
-				<a href="http://instagram.com/animanny">
-					<p id="igHandle">@animanny</p>
-				</a>
-				<a href="http://twitter.com/digitalkami">
-					<p id="twitterHandle">@digitalkami (don't ask)</p>
-				</a>
-				<a href="http://github.com/animanny">
-					<p id="githubHandle">@animanny</p>
-				</a>
+				<div id="ig">
+					<i id="igIcon" class="fab fa-instagram fa-2x"></i>
+					<a href="http://instagram.com/animanny">
+						<p id="igHandle">@animanny</p>
+					</a>
+				</div>
+				<div id="twitter">
+					<i id="twitterIcon" class="fab fa-twitter fa-2x"></i>
+
+					<a href="http://twitter.com/digitalkami">
+						<p id="twitterHandle">@digitalkami (don't ask)</p>
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
