--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -66,7 +66,7 @@
 		</div>
 		<canvas id="starCanvas"></canvas>
 	</div>
-	<div id="greeting">
+	<div id="messages">
 	</div>
 	<div id="about-content">
 		<div id="aboutPic"></div>
