Test Twitter API connection and client-server connection

--- a/portfolio/src/main/webapp/tweetspeech.html
+++ b/portfolio/src/main/webapp/tweetspeech.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body> 
+<body onload="updateTweet()"> 
     <h1 class="headerText">Tweet Speech</h1>
     <p>Tweet Speech will analyze your Twitter history and will determine if any of your thoughts have a significant emotional charge</p>
 	<p>Enter your twitter handle below</p>
