--- a/portfolio/src/main/webapp/tweetspeech.html
+++ b/portfolio/src/main/webapp/tweetspeech.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>  
 <html>
 
 <head>
@@ -13,11 +13,11 @@
 
 </head>
 
-<body onload="updateTweet()"> 
+<body> 
     <h1 class="headerText">Tweet Speech</h1>
     <p>Tweet Speech will analyze your Twitter history and will determine if any of your thoughts have a significant emotional charge</p>
 	<p>Enter your twitter handle below</p>
-    <form onsubmit="alert(getTweets())">
+    <form onsubmit="updateTweet()">
         <input id="handle" type="text">
     </form>
     <script src="tweetSpeechScript.js"></script>
