--- a/portfolio/src/main/webapp/tweetspeech.html
+++ b/portfolio/src/main/webapp/tweetspeech.html
@@ -17,9 +17,13 @@
     <h1 class="headerText">Tweet Speech</h1>
     <p>Tweet Speech will analyze your Twitter history and will determine if any of your thoughts have a significant emotional charge</p>
 	<p>Enter your twitter handle below</p>
-    <form onsubmit="updateTweet()">
-        <input id="handle" type="text">
+    <form onsubmit="updateTweet(event)">
+        <input id="handle" type="text" autocomplete="off">
     </form>
+    <div id="tweets">
+        <p id="analyzing" style="display:none;">Analyzing Tweet...</p>
+        <a id="worstTweetLink" style="display:none;"></a>
+    </div>
     <script src="tweetSpeechScript.js"></script>
 </body>
 
