Removed unnecessary empty lines, updated pending analysis message

--- a/portfolio/src/main/webapp/tweetspeech.html
+++ b/portfolio/src/main/webapp/tweetspeech.html
@@ -21,7 +21,7 @@
         <input id="handle" type="text" autocomplete="off">
     </form>
     <div id="tweets">
-        <p id="analyzing" style="display:none;">Analyzing Tweet...</p>
+        <p id="analyzing" style="display:none;">Analyzing Tweet History. This can take a bit...</p>
         <a id="worstTweetLink" style="display:none;"></a>
     </div>
     <script src="tweetSpeechScript.js"></script>
